--- a/home/templates/main.html
+++ b/home/templates/main.html
@@ -138,8 +138,8 @@
   </div>
   <!-- End About area -->
 
-  <!-- Start Slider Area -->
-  <div id="services" class="services-area area-padding">
+  <!-- Start Slider Area 
+ <div id="services" class="services-area area-padding">
   <div class="section-headline services-head text-center">
       <h2>Project</h2>
     </div>
@@ -151,22 +151,22 @@
         <img src="/static/img/main/slider3.jpg" alt="" title="#slider-direction-3" />
       </div>
 
-      <!-- direction 1 -->
+   
       <div id="slider-direction-1" class="slider-direction slider-one">
         <div class="container">
           <div class="row">
             <div class="col-md-12 col-sm-12 col-xs-12">
               <div class="slider-content">
-                <!-- layer 1 -->
+           
                 <div class="layer-1-1 hidden-xs wow slideInDown" data-wow-duration="2s" data-wow-delay=".2s">
                   <h2 class="title1">젊은 암 경험자의 회복과 정서적 지원 및 권익을 위한 사업</h2>
                 </div>
-                <!-- layer 2 -->
+              
                 <div class="layer-1-2 wow slideInUp" data-wow-duration="2s" data-wow-delay=".1s">
                   <h1 class="title2">암 경험자간 소통 모임 기획 및 지원</h1>
                   <h1 class="title2">여행버킷챌린지 ‘앎’ 캠페인</h1>
                 </div>
-                <!-- layer 3 -->
+                
                 <div class="layer-1-3 hidden-xs wow slideInUp" data-wow-duration="2s" data-wow-delay=".2s">
                   <a class="ready-btn right-btn page-scroll" href="business">자세히보기</a>
                 </div>
@@ -176,22 +176,22 @@
         </div>
       </div>
 
-      <!-- direction 2 -->
+     
       <div id="slider-direction-2" class="slider-direction slider-two">
         <div class="container">
           <div class="row">
             <div class="col-md-12 col-sm-12 col-xs-12">
               <div class="slider-content text-center">
-                <!-- layer 1 -->
+               
                 <div class="layer-1-1 hidden-xs wow slideInUp" data-wow-duration="2s" data-wow-delay=".2s">
                   <h2 class="title1">젊은 암 경험자에 대한 치료 환경 및 인식 개선과 이를 위한 정책 제안 사업</h2>
                 </div>
-                <!-- layer 2 -->
+              
                 <div class="layer-1-2 wow slideInUp" data-wow-duration="2s" data-wow-delay=".1s">
                   <h1 class="title2">의학, 치료제 관련 의학 세미나 개최</h1>
                   <h1 class="title2">유튜브 채널 운영</h1>
                 </div>
-                <!-- layer 3 -->
+                
                 <div class="layer-1-3 hidden-xs wow slideInUp" data-wow-duration="2s" data-wow-delay=".2s">
                   <a class="ready-btn right-btn page-scroll" href="business">자세히보기</a>
                 </div>
@@ -201,22 +201,21 @@
         </div>
       </div>
 
-      <!-- direction 3 -->
       <div id="slider-direction-3" class="slider-direction slider-two">
         <div class="container">
           <div class="row">
             <div class="col-md-12 col-sm-12 col-xs-12">
               <div class="slider-content">
-                <!-- layer 1 -->
+            
                 <div class="layer-1-1 hidden-xs wow slideInUp" data-wow-duration="2s" data-wow-delay=".2s">
                   <h2 class="title1">젊은 암 경험자를 위한 예방, 치료, 회복에 관한 출판, 교육, 홍보 등의<br> 사업</h2>
                 </div>
-                <!-- layer 2 -->
+             
                 <div class="layer-1-2 wow slideInUp" data-wow-duration="2s" data-wow-delay=".1s">
                   <h1 class="title2">온라인/오프라인 홍보 브로셔 발간</h1>
                   <h1 class="title2">홍보 영상 제작/배포</h1>
                 </div>
-                <!-- layer 3 -->
+           
                 <div class="layer-1-3 hidden-xs wow slideInUp" data-wow-duration="2s" data-wow-delay=".2s">
                   <a class="ready-btn right-btn page-scroll" href="business">자세히보기</a>
                 </div>
@@ -226,7 +225,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div>-->
   <!-- End Slider Area -->
 
 
